employer/my-profile page job list api integrated

--- a/src/app/components/pages/my-profile-employer/company-details-page.component.html
+++ b/src/app/components/pages/my-profile-employer/company-details-page.component.html
@@ -170,7 +170,7 @@
             <p class="ms-auto me-auto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga ex minus corrupti obcaecati consectetur nisi quod dolores nihil assumenda nemo!</p>
         </div>
         <div class="row justify-content-center">
-            <div class="col-lg-6 col-sm-6 col-md-6" *ngFor = "let rjob of recentJobs">
+            <div class="col-lg-6 col-sm-6 col-md-6" *ngFor = "let rjob of recentJobsLimitArray">
                 <div class="job-card">
                     <div class="content">
                         <div class="job-image" >
