company details page added edit form and a new path

--- a/src/app/components/pages/my-profile-employer/company-details-page.component.html
+++ b/src/app/components/pages/my-profile-employer/company-details-page.component.html
@@ -32,7 +32,7 @@
                     <p>
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore dolorem quisquam, impedit dolor delectus explicabo nam cumque tempora laudantium! Nulla molestiae dicta consequuntur fugit voluptas dolore doloremque voluptate tempore, qui cumque iusto magni eum velit deserunt? Eaque perferendis aliquam suscipit facere incidunt consequuntur, error blanditiis?
                     </p>
-                    <h4>Work Life Balance</h4>
+                    <!-- <h4>Work Life Balance</h4> -->
                     <!-- <textarea name="about" id="" class="form-control" cols="30" rows="10">
 
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Feugiat enim a erat sit vulputate elementum orci. Risus nec viverra ornare venenatis proin ac varius tristique ut. Vitae egestas tellus amet nulla cursus.ands Pellentesque placerat
@@ -46,7 +46,8 @@
                     </ul>
                     </textarea> -->
 
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus placeat hic voluptates error quis aliquid, debitis quasi minima cumque. Qui voluptatem similique aspernatur rem possimus odio, in explicabo nisi totam sapiente animi perferendis hic amet reprehenderit! Alias odio quidem architecto deleniti, neque eligendi dolor quo nemo temporibus excepturi similique obcaecati, nihil optio quis soluta culpa atque. Provident ipsa expedita assumenda sed et odit, omnis doloremque voluptatem quo possimus accusantium eos ex esse sequi, quos unde. Nulla voluptatem quis at molestiae ut vitae, est cum quidem facere dicta earum reiciendis aut facilis itaque magni amet, laborum adipisci, voluptas ipsa. Vitae, quidem?</p>
+                    <!-- <p>Lor em ipsum dolor sit amet consectetur adipisicing elit. Natus placeat hic voluptates error quis aliquid, debitis quasi minima cumque. Qui voluptatem similique aspernatur rem possimus odio, in explicabo nisi totam sapiente animi perferendis hic amet reprehenderit! Alias odio quidem architecto deleniti, neque eligendi dolor quo nemo temporibus excepturi similique obcaecati, nihil optio quis soluta culpa atque. Provident ipsa expedita assumenda sed et odit, omnis doloremque voluptatem quo possimus accusantium eos ex esse sequi, quos unde. Nulla voluptatem quis at molestiae ut vitae, est cum quidem facere dicta earum reiciendis aut facilis itaque magni amet, laborum adipisci, voluptas ipsa. Vitae, quidem?</p> -->
+                    <br>
                     <h4>Achievement</h4>
                     <div class="row justify-content-center">
                         <div class="col-lg-4 col-6 col-md-4">
@@ -70,10 +71,11 @@
                     </div>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Feugiat enim a erat sit vulputate elementum orci. Risus nec viverra ornare venenatis proin ac varius tristique ut. Vitae egestas tellus amet nulla cursus in that. Pellentesque
                         placerat maecenas egestas ullamcorper sed sarinto.</p>
-                    <h4>Gallery</h4>
+                    
+                        <!-- <h4>Gallery</h4> -->
                     <div class="row">
                         <div class="col-lg-4 col-sm-4 col-md-4">
-                            <div class="image">
+                            <!-- <div class="image">
                                 <img src="assets/images/blog/blog-img1.jpg" alt="blog-image">
                             </div>
                         </div>
@@ -85,11 +87,11 @@
                         <div class="col-lg-4 col-sm-4 col-md-4">
                             <div class="image">
                                 <img src="assets/images/blog/blog-img3.jpg" alt="blog-image">
-                            </div>
+                            </div> -->
                         </div>
                     </div>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Feugiat enim a erat sit vulputate elementum orci. Risus nec viverra ornare venenatis proin ac varius tristique ut. Vitae egestas tellus amet nulla cursus in that. Pellentesque
-                        placerat maecenas egestas ullamcorper sed sarinto.</p>
+                    <!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Feugiat enim a erat sit vulputate elementum orci. Risus nec viverra ornare venenatis proin ac varius tristique ut. Vitae egestas tellus amet nulla cursus in that. Pellentesque
+                        placerat maecenas egestas ullamcorper sed sarinto.</p> -->
                 </div>
             </div>
             <div class="col-lg-4 col-md-12">
@@ -152,8 +154,11 @@
                                     </li>
                                 </ul>
                             </li>
+
                         </ul>
-                        <!-- <a href="#" class="default-btn">Claim This Company</a> -->
+                        <div style="text-align: center;">
+                            <a href="#/employer/my-profile/edit" class="default-btn p-3" style="border-radius: 50px;">Edit Profile</a>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -201,7 +206,6 @@
                     <button class="bookmark-btn"><i class="ri-bookmark-line"></i></button> -->
                 </div>
             </div>
-            <a href="#/jobs/posted" style="text-align: center;">Browse All Jobs Posted</a>
             <!-- <div class="col-lg-6 col-sm-6 col-md-6">
                 <div class="job-card">
                     <div class="content">
@@ -227,6 +231,7 @@
                     <button class="bookmark-btn"><i class="ri-bookmark-line"></i></button>
                 </div>
             </div> -->
+            <a href="#/jobs/posted" style="text-align: center;">Browse All Jobs Posted</a>
         </div>
     </div>
 </div>
