shortlisted candidate details

--- a/src/app/components/pages/employer-dashboard/employer-dashboard-page.component.html
+++ b/src/app/components/pages/employer-dashboard/employer-dashboard-page.component.html
@@ -318,7 +318,7 @@
                         <div class="job-image">
                             <a
                                 (click)="empidPass(empjob[1].id)"
-                                routerLink="/jobs/details"
+                                routerLink="/jobs/applicants"
                             >
                                 <img
                                     src="assets/images/job/job1.jpg"
@@ -329,7 +329,7 @@
                         <h3>
                             <a
                                 (click)="empidPass(empjob[1].id)"
-                                routerLink="/jobs/details"
+                                routerLink="/jobs/applicants"
                                 >{{ empjob[1].job_title }}</a
                             >
                         </h3>
