--- a/src/app/components/pages/main-home/main-home.component.html
+++ b/src/app/components/pages/main-home/main-home.component.html
@@ -1,12 +1,12 @@
 <app-main-banner></app-main-banner>
 
-<app-jobs-categories></app-jobs-categories>
+<!-- <app-jobs-categories></app-jobs-categories> -->
 
 <app-recent-jobs></app-recent-jobs>
 
-<app-featured-jobs></app-featured-jobs>
+<!-- <app-featured-jobs></app-featured-jobs> -->
 
-<app-top-company></app-top-company>
+<!-- <app-top-company></app-top-company> -->
 
 <app-testimonials></app-testimonials>
 
