updated pricing component

--- a/src/app/components/common/pricing/pricing.component.html
+++ b/src/app/components/common/pricing/pricing.component.html
@@ -14,7 +14,7 @@
                         <tbody>
                             <tr>
                                 <td>What You Get</td>
-                                <td>Extended Plan</td>
+                                <td>Launch Offer Plan</td>
                                 <!-- <td>Premium Plan</td> -->
                             </tr>
                             <tr>
