removed not intrseted

--- a/src/app/components/pages/candidates-list-jobs/job-details-page.component.html
+++ b/src/app/components/pages/candidates-list-jobs/job-details-page.component.html
@@ -94,8 +94,8 @@
                                             </td>
                                             <td class="text-center">
                                                 <div class="primary-btn">
-                                                    <a class="btn btn-success m-1" href="#">Shortlist</a>
-                                                    <a class="btn btn-outline-danger m-1" href="#">Not Intrested</a>
+                                                    <a class="btn btn-success m-1">Shortlist</a>
+                                                    <!-- <a class="btn btn-outline-danger m-1" href="#">Not Intrested</a> -->
                                                 </div>
                                             </td>
                                         </tr>
