--- a/src/app/components/common/footer/footer.component.html
+++ b/src/app/components/common/footer/footer.component.html
@@ -12,11 +12,13 @@
                         <ul class="footer-contact-list">
                             <li>
                                 <i class="ri-map-pin-line"></i>
-                                <a href="https://goo.gl/maps/9FreR1rVLxe5HgHB7" target="_blank">Mumbai, Maharastra, India</a>
+                                <a href="https://goo.gl/maps/9FreR1rVLxe5HgHB7" target="_blank">
+                                    Shop No. 2-A, Shri Ganesh CHS, Next to Sansakar College (DTSS College), OFF Western Express Highway, Malad (East), Mumbai - 400097
+                                </a>
                             </li>
                             <li>
                                 <i class="ri-mail-line"></i>
-                                <a href="mailto:wfhworld@gmail.com">wfhworld@gmail.com</a>
+                                <a href="mailto:care@workfromhome.world">care@workfromhome.world</a>
                             </li>
                             <!-- <li>
                                 <i class="ri-phone-line"></i>
