--- a/src/app/components/common/main-banner/main-banner.component.html
+++ b/src/app/components/common/main-banner/main-banner.component.html
@@ -28,15 +28,16 @@
                     </div>
                 </form>
             </div>
-            <div class="popular-search" *ngIf="postajob;">
+            <div class="popular-search" *ngIf="postajob;" >
                 <span class="title">Popular Search: </span>
-                <a routerLink="/job-listing">Moonlighting</a>
-                <!-- <a routerLink="/job-listing">Developer</a> -->
+                <label for=""></label>
+                <a routerLink="/job-listing" *ngFor="let latestTrendTerm of latestTrend">{{ latestTrendTerm }}</a>
+                <!-- <a routerLink="/job-listing">Developer</a>
                 <a routerLink="/job-listing">Startups</a>
                 <a routerLink="/job-listing">Tech Jobs</a>
                 <a routerLink="/job-listing">Full Stack</a>
                 <a routerLink="/job-listing">Flutter</a>
-                <a routerLink="/job-listing">Web</a>
+                <a routerLink="/job-listing">Web</a> -->
             </div>
         </div>
     </div>
